<resources>
    <string name="app_name">tp1</string>
    <string name="title_home">Home</string>
    <string name="title_favorites">Favorites</string>
    <string name="title_login">Login</string>
    <string name="login">login</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="defaultUsername">e1730934</string>
    <string name="image_of_the_tvshow_presented">Image of the tvshow presented</string>
    <string name="seasons">Seasons</string>
    <string name="cast">Cast</string>
    <string name="image_of_the_cast_member">Image of the cast member</string>
    <string name="default_season_name">Default Season Name</string>
    <string name="textview">TextView</string>
    <string name="default_year">Default Year</string>
    <string name="default_title">Default title</string>
    <string name="default_episode_count">Default episode count</string>
    <string name="default_plot">Default plot</string>
    <string name="default_character_name">Default Character Name</string>
    <string name="default_cast_member_name">Default Cast Member Name</string>
    <string name="image_of_the_season">Image of the season</string>
    <string name="add_remove_tvshow_from_favorites">Add / Remove tvshow from favorites</string>
</resources>
