<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imgCastMember"
        android:layout_width="150dp"
        android:layout_height="200dp"
        android:layout_weight="1"
        android:contentDescription="@string/image_of_the_cast_member"
        app:srcCompat="@drawable/cast" />

    <TextView
        android:id="@+id/txtCharacterName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/default_character_name" />

    <TextView
        android:id="@+id/txtCastFullName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/default_cast_member_name" />
</LinearLayout>
