<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imgSeasonPoster"
        android:layout_width="150dp"
        android:layout_height="200dp"
        android:layout_weight="1"
        android:contentDescription="@string/image_of_the_season"
        app:srcCompat="@drawable/poster" />

    <TextView
        android:id="@+id/txtSeasonName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/default_season_name"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/txtEpisodesCount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/default_episode_count"
        android:textAlignment="center" />
</LinearLayout>
