<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                                   android:layout_height="match_parent">

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:ems="10"
            android:id="@+id/inputUsername"
            android:hint="@string/enter_your_username"
            android:text="@string/defaultUsername"
            android:textColorHint="#757575"
            android:autofillHints="" android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.815"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.248"/>
    <TextView
            android:text="@string/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/lblPassword"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="28dp" app:layout_constraintTop_toTopOf="@+id/inputPassword"
            app:layout_constraintBottom_toBottomOf="@+id/inputPassword" app:layout_constraintVertical_bias="0.448"/>
    <Button
            android:text="@string/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/btnLogin"
            app:layout_constraintTop_toBottomOf="@+id/inputPassword"
            android:layout_marginTop="80dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.489" app:layout_constraintVertical_bias="0.0"/>
    <TextView
            android:text="@string/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/lblEmail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/inputUsername"
            app:layout_constraintHorizontal_bias="0.285" app:layout_constraintTop_toTopOf="@+id/inputUsername"
            app:layout_constraintBottom_toBottomOf="@+id/inputUsername" app:layout_constraintVertical_bias="0.413"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/inputPassword"
            android:hint="@string/enter_your_password"
            android:text="@string/defaultUsername"
            android:textColorHint="#757575"
            android:autofillHints="" android:minHeight="48dp" app:layout_constraintStart_toEndOf="@+id/lblPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputUsername" android:layout_marginTop="56dp"
            app:layout_constraintHorizontal_bias="0.663"/>
</androidx.constraintlayout.widget.ConstraintLayout>
