<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/dtvs_imgTvShow"
        android:layout_width="150dp"
        android:layout_height="200dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/image_of_the_tvshow_presented"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/poster" />

    <TextView
        android:id="@+id/dtvs_tvTitle"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/default_title"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/dtvs_imgTvShow"
        app:layout_constraintTop_toTopOf="@+id/dtvs_imgTvShow" />

    <TextView
        android:id="@+id/dtvs_Years"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/default_year"
        app:layout_constraintStart_toStartOf="@+id/dtvs_tvTitle"
        app:layout_constraintTop_toBottomOf="@+id/dtvs_tvTitle" />

    <TextView
        android:id="@+id/dtvs_EpisodesCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/default_episode_count"
        app:layout_constraintStart_toStartOf="@+id/dtvs_Years"
        app:layout_constraintTop_toBottomOf="@+id/dtvs_Years" />

    <TextView
        android:id="@+id/dtvs_Summary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/default_plot"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.132"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dtvs_imgTvShow" />

    <TextView
        android:id="@+id/lblCast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="366dp"
        android:text="@string/cast"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dtvs_Summary" />

    <TextView
        android:id="@+id/lblSeason"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/seasons"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dtvs_rvCast" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/dtvs_rvCast"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblCast"
        tools:itemCount="1"
        tools:listitem="@layout/item_cast" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/dtvs_rvSeasons"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblSeason"
        tools:itemCount="1"
        tools:listitem="@layout/item_season" />

    <ImageButton
        android:id="@+id/dtvs_btnActionFav"
        style="@style/Widget.AppCompat.ImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/add_remove_tvshow_from_favorites"
        app:layout_constraintStart_toStartOf="@+id/dtvs_EpisodesCount"
        app:layout_constraintTop_toBottomOf="@+id/dtvs_EpisodesCount"
        app:srcCompat="@android:drawable/btn_star"
        app:tint="@color/white" />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
